Fix heading on IE 11

--- a/scss/_organism-masthead.scss
+++ b/scss/_organism-masthead.scss
@@ -12,6 +12,7 @@
 	h1 {
 		margin-top: .5em;
 		text-align: center;
+		width: 100%;
 	}
 	blockquote {
 		margin-top: 1.5em;
